# pypocketmap

./: .gitignore  Makefile  README.md  appveyor.yml  flake.nix  gen.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build_wheels.yml
CORPUS/: A
microdict/: __init__.py  __init__.pyi  abstract.h  flags.h  simd.h  str_int64_Py.c
microdict/_mdict_c/: str_int64.pyi
microdict/tests/: str_int64.c
pypocketmap/: __init__.py  __init__.pyi  abstract.h  bits.h  optimization.h  packed.h  simd.h  str_float32_Py.c  str_float64_Py.c  str_int32_Py.c  str_int64_Py.c  str_str_Py.c
pypocketmap/_pkt_c/: str_int64.pyi
pypocketmap/tests/: generate.py  str_int64.c
tests/fuzz/: fuzzquick.py
tests/profile/: wordcount.py
tests/unit/: test_hypothesis.py  test_str_int64.py
